Fix BD & Update web page

--- a/Diseño y programacion web/sisgran/css/footer.css
+++ b/Diseño y programacion web/sisgran/css/footer.css
@@ -75,3 +75,7 @@
 .footer-geatech-info p a:hover{
     color: var(--verdeClaro);
 }
+
+.footer-sisgran, .footer-sobre-nosotros, .footer-contacto p{
+    text-align: justify;
+}
