--- a/Diseño y programacion web/sisgran/css/globales.css
+++ b/Diseño y programacion web/sisgran/css/globales.css
@@ -166,3 +166,47 @@ textarea{
 .tooltip:hover.tooltip:after{
     opacity: 100%;
 } */
+
+/* ERROR LOGIN */
+.error-login{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    width: 600px;
+    height: 450px;
+    border: 1px solid var(--gris);
+    backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--blanco);
+    border-radius: 15px;
+    z-index: 100;
+}
+
+.error-login__texto{
+    color: var(--negro);
+}
+
+.error-login__cerrar{
+    color: var(--negro);
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 15px;
+    cursor: pointer;
+}
+
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 50;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
