--- a/Diseño y programacion web/sisgran/css/tienda.css
+++ b/Diseño y programacion web/sisgran/css/tienda.css
@@ -139,10 +139,8 @@ body{
 }
 
 .info-carrito{
-    position: absolute;
-    bottom: 0;
+    margin-top: 10px;
     width: 100%;
-    margin-bottom: 50px;
     display: flex;
     flex-direction: column;
     text-align: center;
